fix forceJump before actionBtn

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: rgb(183, 159, 250);
 }
 
 .player-one-turn{
